# app/swagger/swagger.yaml
@@ -104,13 +104,13 @@ definitions:
     type: object
   menu.DevopsSysMenu:
     properties:
+      badge:
+        description: badge
+        type: string
       children:
         items:
           $ref: '#/definitions/menu.DevopsSysMenu'
         type: array
-      closeTab:
-        description: 自动关闭tab
-        type: integer
       component:
         description: 对应前端文件路径
         type: string
@@ -118,35 +118,39 @@ definitions:
         type: string
       defaultMenu:
         description: 是否是基础路由（开发中）
-        type: integer
+        type: boolean
+      dot:
+        description: 是否dot
+        type: boolean
       hidden:
-        description: 是否在列表隐藏
-        type: integer
+        description: 是否隐藏
+        type: boolean
       icon:
         description: 菜单图标
         type: string
       id:
         description: 主键
         type: integer
-      keepAlive:
-        description: 是否缓存
-        type: integer
-      menuBtn:
-        items:
-          $ref: '#/definitions/menu.DevopsSysMenuBtn'
-        type: array
+      levelHidden:
+        description: 始终显示当前节点
+        type: boolean
       name:
         description: 路由name
         type: string
-      parameters:
-        items:
-          $ref: '#/definitions/menu.DevopsSysMenuParameter'
-        type: array
+      noClosable:
+        description: 是否固定
+        type: boolean
+      noKeepAlive:
+        description: 是否缓存
+        type: boolean
       parentId:
         description: 父菜单ID
         type: string
       path:
         description: 路由path
+        type: string
+      redirect:
+        description: 排序标记
         type: string
       sort:
         description: 排序标记
@@ -154,34 +158,18 @@ definitions:
       title:
         description: 菜单名
         type: string
-      updated_at:
-        type: string
-    type: object
-  menu.DevopsSysMenuBtn:
-    properties:
-      created_at:
-        type: string
-      desc:
-        type: string
-      id:
-        description: 主键
-        type: integer
-      name:
-        type: string
-      sysBaseMenuID:
-        type: integer
       updated_at:
         type: string
     type: object
   menu.DevopsSysMenuEntity:
     properties:
+      badge:
+        description: badge
+        type: string
       children:
         items:
           $ref: '#/definitions/menu.DevopsSysMenu'
         type: array
-      closeTab:
-        description: 自动关闭tab
-        type: integer
       component:
         description: 对应前端文件路径
         type: string
@@ -189,35 +177,39 @@ definitions:
         type: string
       defaultMenu:
         description: 是否是基础路由（开发中）
-        type: integer
+        type: boolean
+      dot:
+        description: 是否dot
+        type: boolean
       hidden:
-        description: 是否在列表隐藏
-        type: integer
+        description: 是否隐藏
+        type: boolean
       icon:
         description: 菜单图标
         type: string
       id:
         description: 主键
         type: integer
-      keepAlive:
-        description: 是否缓存
-        type: integer
-      menuBtn:
-        items:
-          $ref: '#/definitions/menu.DevopsSysMenuBtn'
-        type: array
+      levelHidden:
+        description: 始终显示当前节点
+        type: boolean
       name:
         description: 路由name
         type: string
-      parameters:
-        items:
-          $ref: '#/definitions/menu.DevopsSysMenuParameter'
-        type: array
+      noClosable:
+        description: 是否固定
+        type: boolean
+      noKeepAlive:
+        description: 是否缓存
+        type: boolean
       parentId:
         description: 父菜单ID
         type: string
       path:
         description: 路由path
+        type: string
+      redirect:
+        description: 排序标记
         type: string
       sort:
         description: 排序标记
@@ -226,27 +218,6 @@ definitions:
         description: 菜单名
         type: string
       updated_at:
-        type: string
-    type: object
-  menu.DevopsSysMenuParameter:
-    properties:
-      created_at:
-        type: string
-      devopsSysMenuID:
-        type: integer
-      id:
-        description: 主键
-        type: integer
-      key:
-        description: 地址栏携带参数的key
-        type: string
-      type:
-        description: 地址栏携带参数为params还是query
-        type: string
-      updated_at:
-        type: string
-      value:
-        description: 地址栏携带参数的值
         type: string
     type: object
   node.ActionRule:
@@ -616,6 +587,33 @@ definitions:
         description: 配置的value
         type: string
     type: object
+  request.SearchIconParams:
+    properties:
+      created_at:
+        type: string
+      desc:
+        description: 排序方式:升序false(默认)|降序true
+        type: boolean
+      filter:
+        items:
+          type: string
+        type: array
+      id:
+        description: 主键
+        type: integer
+      orderKey:
+        description: 排序
+        type: string
+      page:
+        type: integer
+      pageSize:
+        type: integer
+      title:
+        description: 系统图标名称
+        type: string
+      updated_at:
+        type: string
+    type: object
   request.SearchLogsParams:
     properties:
       agent:
@@ -676,13 +674,13 @@ definitions:
     type: object
   request.SearchMenusParams:
     properties:
+      badge:
+        description: badge
+        type: string
       children:
         items:
           $ref: '#/definitions/menu.DevopsSysMenu'
         type: array
-      closeTab:
-        description: 自动关闭tab
-        type: integer
       component:
         description: 对应前端文件路径
         type: string
@@ -690,33 +688,38 @@ definitions:
         type: string
       defaultMenu:
         description: 是否是基础路由（开发中）
-        type: integer
+        type: boolean
       desc:
         description: 排序方式:升序false(默认)|降序true
+        type: boolean
+      dot:
+        description: 是否dot
         type: boolean
       filter:
         items:
           type: string
         type: array
       hidden:
-        description: 是否在列表隐藏
-        type: integer
+        description: 是否隐藏
+        type: boolean
       icon:
         description: 菜单图标
         type: string
       id:
         description: 主键
         type: integer
-      keepAlive:
-        description: 是否缓存
-        type: integer
-      menuBtn:
-        items:
-          $ref: '#/definitions/menu.DevopsSysMenuBtn'
-        type: array
+      levelHidden:
+        description: 始终显示当前节点
+        type: boolean
       name:
         description: 路由name
         type: string
+      noClosable:
+        description: 是否固定
+        type: boolean
+      noKeepAlive:
+        description: 是否缓存
+        type: boolean
       orderKey:
         description: 排序
         type: string
@@ -724,15 +727,14 @@ definitions:
         type: integer
       pageSize:
         type: integer
-      parameters:
-        items:
-          $ref: '#/definitions/menu.DevopsSysMenuParameter'
-        type: array
       parentId:
         description: 父菜单ID
         type: string
       path:
         description: 路由path
+        type: string
+      redirect:
+        description: 排序标记
         type: string
       sort:
         description: 排序标记
@@ -853,7 +855,7 @@ definitions:
     properties:
       ids:
         description: 角色ID
-        type: string
+        type: integer
     type: object
   sys.LoginRequest:
     properties:
@@ -1843,6 +1845,30 @@ paths:
       summary: 获得分组资源接口
       tags:
       - Group
+  /sys/icon/list:
+    post:
+      consumes:
+      - application/json
+      description: 获得图标接口
+      parameters:
+      - description: 页数，页大小，筛选条件
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.SearchIconParams'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 获得图标接口
+      tags:
+      - Menu
   /sys/menu/{id}:
     get:
       consumes:
@@ -1947,7 +1973,7 @@ paths:
       tags:
       - Menu
   /sys/menu/get/tree:
-    post:
+    get:
       produces:
       - application/json
       responses:
